@@ -73,6 +73,7 @@ NOTE: Someone remove duplication between 0.8.7f and 0.8.8
 -bug#0002063: multiple value poller output incorrectly interpreted as hexadecimal value
 -bug#0002064: Removing '~' (tilde) by sanitize_uri() conflicts with Apache UserDir translation 
 -bug#0002079: Using input field of a script in graph title doesn't work 
+-bug: Update host template cli script help shows incorrect options
 -bug: remove graph permissions if graph is removed
 -bug: remove host permissions if host is removed
 -bug: add_tree.php did not allow nodes with propagating sort options
