@@ -8,6 +8,7 @@ SVN
 -bug#0002066: Graph without host id Notice: Undefined variable: host_id
 -bug#0002067: custom time range filter not working 
 -bug#0002079: Using input field of a script in graph title doesn't work 
+-bug: Update host template cli script help shows incorrect options
 -bug: Refresh of Cacti Log Broken wiht 0.8.7h
 -bug: Problems saving User Graph Permissions in IE9
 
